--- a/gb/23/1/20/n13911460.md
+++ b/gb/23/1/20/n13911460.md
@@ -55,31 +55,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/7/n10283450.md#1" target="_blank">改革开放总设计师还是“总扼制师”？(上)</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/9/16/n3684317.md#1" target="_blank">我的人生，注定是一场修炼</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/8/n11241913.md#1" target="_blank">【征文】袁斌：中共怎样用党文化取代传统文化</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/11/6/n4003814.md#1" target="_blank">信师信法　一路前行（下）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945330.md#1">【未解之谜】罕见天象昭示红朝命数？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13944080.md#1">一代圣主康熙皇帝至孝之至 数十年如一日</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/5/22/n13743021.md#1">大劫前冥府造册 是否真的在劫难逃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945916.md#1">电视人患忧郁症陷绝境 因一本奇书改变命运</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/20/n13933872.md#1">诗：聆听创世主的雷音 ⑴⑵</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13947709.md#1">【时事金扫描】习连任的百年轮回 两会提案怪异</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948202.md#1">【财商天下】Temu狂飙北美 烧钱越多隐患越大？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947539.md#1">【探索时分】援乌上万枚反坦克导弹 美军工强大</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947069.md#1">丑闻缠身 韩正接替王岐山任中共国家副主席</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947020.md#1">习近平三连任 分析：或将遭遇前所未有打击</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947000.md#1">中共国务院机构改革方案通过 罕现1票反对</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947566.md#1">关晓彤零遮掩买早餐 与店员逗趣对话笑翻网友</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947269.md#1">TWICE发行迷你12辑 透露成员关系亲密秘诀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946900.md#1">陆男团偶像徐炳超消失半年 街头卖包子上热搜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947592.md#1">消失7个月 26岁男星蒋智豪确诊肺癌晚期</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946850.md#1">退休前想重温拍剧 梁朝伟未必首选TVB</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13943988.md#1">快速摆脱身体不适 高剂量维生素C有助改善</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947035.md#1">抗癌有最佳时间</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/26/n13938698.md#1">随时随地都能专心工作的7个诀窍</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946765.md#1">一房二用 10种隐形床打造复合空间</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13943987.md#1">药量过重？ 医师教你减轻服药的潜在危害</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13956715.md#1">鬼使迎接 谁人来当阎罗王？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962711.md#1">【晚间新闻】河北邯郸驾车撞人案 伤亡或惨重</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962804.md#1">【环球直击】川普被刑事起诉 各界呼吁结束闹剧</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963341.md#1">【马克时空】美陆战队坦克兵谈M1A1（下）</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962742.md#1">河北邯郸街头有车辆乱撞行人 现场发出巨响</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962166.md#1">【翻墙必看】传马云被“游说”回国细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962806.md#1">习和西班牙首相会面 一关键问题新华社不敢提</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13962030.md#1">74岁王刚清空社交账号内容 网友质疑出状况</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961584.md#1">田馥甄喜迎40岁 深夜无预警再揭8月喜讯</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961705.md#1">为什么搭机时不应该穿紧身裤和脱鞋子？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13958891.md#1">每天接触毒素易生病 5种奇特排毒法超简单</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/30/n13961835.md#1">研究：越常吃垃圾食品 大脑就越讨厌健康食物</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/20/n13911460.htm">32届首尔歌谣大赏 NCT DREAM首获大奖</a></p><hr>
